--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .main-container {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     /* height: 100px; */
     /* display: flex;
     flex-direction: column; */
@@ -14,7 +14,7 @@ body {
 }
 
 main {
-    border: 2px solid gold;
+    /* border: 2px solid gold; */
     font-family: 'Titillium Web', sans-serif;
     height: 450px;
     background-image: url('NASAbackground.jpg');
@@ -31,7 +31,7 @@ main {
 
 section {
     margin: 15px 0 0 0;
-    border: 2px solid limegreen;
+    /* border: 2px solid limegreen; */
     height: 324px;
     font-family: 'Silkscreen', cursive;
     display: flex;
@@ -42,14 +42,14 @@ section {
 
 .triplethreat {
     width: 270px;
-    border: 2px purple solid;
-    margin: 0;
+    /* border: 2px purple solid; */
+    margin: 0px 10px;
     flex: 1;
 }
 
 .triplethreat > h1 {
     font-size: 25px;
-    text-align: center;
+    text-align: left;
 }
 
 #social {
@@ -57,39 +57,12 @@ section {
     flex-direction: column;
 }
 
-#social > h1 {
-    width: 100%;
-    border: 1px black solid;
-}
-
-#social > p {
-    border: 1px white solid;
-}
-
 #info {
     display: flex;
     flex-direction: column;
 }
 
-#info > h1 {
-    width: 100%;
-    border: 1px black solid;
-}
-
-#info > p {
-    border: 1px white solid;
-}
-
 #contact {
     display: flex;
     flex-direction: column;
-}
-
-#contact > h1 {
-    width: 100%;
-    border: 1px black solid;
-}
-
-#contact > p {
-    border: 1px white solid;
 }
