--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,8 @@ main {
 }
 
 #NASA-title {
-    margin-top: 150px;
+    /* margin-top: 150px; */
+    padding-top: 150px;
 }
 
 section {
@@ -43,13 +44,13 @@ section {
 .triplethreat {
     width: 270px;
     /* border: 2px purple solid; */
-    margin: 0px 10px;
+    margin: 0;
     flex: 1;
 }
 
 .triplethreat > h1 {
     font-size: 25px;
-    text-align: left;
+    text-align: center;
 }
 
 #social {
