One more adjustment to triple threat margins

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ section {
 .triplethreat {
     width: 270px;
     /* border: 2px purple solid; */
-    margin: 0;
+    margin: 0px 10px;
     flex: 1;
 }
 
